--- a/MultiCommentViewer/Views/CommentDataGrid.xaml
+++ b/MultiCommentViewer/Views/CommentDataGrid.xaml
@@ -58,7 +58,11 @@
                 <Separator />
                 <MenuItem x:Name="UserInfoMenuItem" Header="ユーザ情報" Command="{Binding ShowUserInfoCommand}" />
             </ContextMenu>
-            <Style TargetType="{x:Type DataGridRow}">
+                <Style TargetType="{x:Type DataGrid}">
+                    <Setter Property="Background" Value="{Binding MetadataViewBackground}" />
+                    <Setter Property="Foreground" Value="{Binding MetadataViewForeground}" />
+                </Style>
+                <Style TargetType="{x:Type DataGridRow}">
                 <Setter Property="FontFamily" Value="{Binding FontFamily}" />
                 <Setter Property="FontStyle" Value="{Binding FontStyle}" />
                 <Setter Property="FontWeight" Value="{Binding FontWeight}" />
@@ -90,16 +94,21 @@
             </ContextMenu>
             <Style TargetType="{x:Type DataGridColumnHeader}">
                 <Setter Property="ContextMenu" Value="{StaticResource listViewHeaderContext}" />
+                <Setter Property="Foreground" Value="{Binding DataContext.MetadataViewHeaderForeground, Source={x:Reference dummyElement}}" />
+                <Setter Property="Background" Value="{Binding DataContext.MetadataViewHeaderBackground, Source={x:Reference dummyElement}}" />
+                <Setter Property="BorderBrush" Value="{Binding DataContext.MetadataViewHeaderBorderBrush, Source={x:Reference dummyElement}}" />
+                <Setter Property="BorderThickness" Value="0 0 1 0" />
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
             </Style>
         </DataGrid.Resources>
         <DataGrid.Columns>
-            <DataGridTemplateColumn Header="接続名" 
+                <DataGridTemplateColumn Header="接続名" 
                                             DisplayIndex="{Binding DataContext.ConnectionNameDisplayIndex, Mode=TwoWay, Source={x:Reference dummyElement}, FallbackValue=0}"
                                             Width="{Binding DataContext.ConnectionNameWidth, Mode=TwoWay, Source={x:Reference dummyElement}, Converter={StaticResource dataGridLengthConverter}}"
                                             Visibility="{Binding DataContext.IsShowConnectionName, Source={x:Reference dummyElement}, Converter={StaticResource booleanToVisibilityConverter}}">
-                <DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.CellTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding ConnectionName.Name}" Padding="5,0" />
+                        <TextBlock Text="{Binding ConnectionName.Name}" Padding="5,0" HorizontalAlignment="Center" />
                     </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
